cleaned up comments in gui.class